--- a/modules-available/serversetup-bwlp-ipxe/lang/de/template-tags.json
+++ b/modules-available/serversetup-bwlp-ipxe/lang/de/template-tags.json
@@ -15,11 +15,13 @@
     "lang_bootentryHead": "Men\u00fceintr\u00e4ge",
     "lang_bootentryIntro": "Hier k\u00f6nnen Sie Men\u00fceintr\u00e4ge definieren, die sich sp\u00e4ter einem Men\u00fc zuweisen lassen. Ein Men\u00fceintrag besteht entweder aus einem zu ladenden Kernel\/Image plus optional initrd, oder aus einem iPXE-Skript.",
     "lang_bootentryTitle": "Men\u00fceintrag",
+    "lang_bootentryType": "Typ",
     "lang_chooseIP": "Bitte w\u00e4hlen Sie die IP-Adresse, \u00fcber die der Server von den Clients zum Booten angesprochen werden soll.",
     "lang_commandLine": "Command line",
     "lang_copy": "Kopieren",
     "lang_count": "Anzahl",
     "lang_createUsbImage": "Bootbaren USB-Stick erstellen",
+    "lang_dhcpOverrides": "DHCP-Optionen \u00fcberschreiben",
     "lang_downloadBootImage": "Boot-Image herunterladen",
     "lang_downloadRufus": "Rufus herunterladen",
     "lang_editBootEntryHead": "Men\u00fceintrag bearbeiten",
@@ -30,15 +32,18 @@
     "lang_entryId": "ID",
     "lang_entryTitle": "Bezeichnung",
     "lang_execAutoUnload": "Nach Ausf\u00fchrung entladen (--autofree)",
+    "lang_execImageFree": "Andere geladene Images vor dem Ausf\u00fchren entladen (imgfree)",
     "lang_execReplace": "Aktuellen iPXE-Stack erstzen (--replace)",
     "lang_execResetConsole": "Konsole vor Ausf\u00fchrung zur\u00fccksetzen",
     "lang_forceRecompile": "Jetzt neu kompilieren",
     "lang_generationFailed": "Erzeugen des Bootmen\u00fcs fehlgeschlagen. Der Netzwerkboot von bwLehrpool wird wahrscheinlich nicht funktionieren. Wenn Sie den Fehler nicht selbst beheben k\u00f6nnen, melden Sie bitte die Logausgabe an das bwLehrpool-Projekt.",
+    "lang_hex": "Hex",
     "lang_hotkey": "Hotkey",
     "lang_idFormatHint": "(Max. 16 Zeichen, nur a-z 0-9 - _)",
     "lang_imageToLoad": "Zu ladendes Image (z.B. Kernel)",
     "lang_import": "Importieren",
     "lang_initRd": "Zu ladendes initramfs",
+    "lang_ipxeSettings": "iPXE-spezifische Einstellungen",
     "lang_ipxeWikiUrl": "im iPXE Wiki",
     "lang_isDefault": "Standard",
     "lang_listOfMenus": "Men\u00fcliste",
