--- a/modules-available/serversetup-bwlp-ipxe/lang/en/template-tags.json
+++ b/modules-available/serversetup-bwlp-ipxe/lang/en/template-tags.json
@@ -15,11 +15,13 @@
     "lang_bootentryHead": "Menu items",
     "lang_bootentryIntro": "This is where you can add, edit and remove menu items, which can be added to menus. A menu item is either a combination of a kernel\/image to load (and an optional initrd), or a custom iPXE-script.",
     "lang_bootentryTitle": "Menu item",
+    "lang_bootentryType": "Type",
     "lang_chooseIP": "Please select the IP address that the client server will use to boot.",
     "lang_commandLine": "Command line",
     "lang_copy": "Copy",
     "lang_count": "Count",
     "lang_createUsbImage": "Create bootable thumb drive",
+    "lang_dhcpOverrides": "Override DHCP options",
     "lang_downloadBootImage": "Download boot-image",
     "lang_downloadRufus": "Download Rufus",
     "lang_editBootEntryHead": "Edit menu item",
@@ -30,15 +32,18 @@
     "lang_entryId": "ID",
     "lang_entryTitle": "Title",
     "lang_execAutoUnload": "Unload after execution (--autofree)",
+    "lang_execImageFree": "Unload any other images before execution (imgfree)",
     "lang_execReplace": "Replace current iPXE stack (--replace)",
     "lang_execResetConsole": "Reset console before execution",
     "lang_forceRecompile": "Force recompile",
     "lang_generationFailed": "Could not generate boot menu. The bwLehrpool-System might not work properly. If you can't fix the problem, please report the error log below to the bwLehrpool project.",
+    "lang_hex": "Hex",
     "lang_hotkey": "Hotkey",
     "lang_idFormatHint": "(16 chars max, a-z 0-9 - _)",
     "lang_imageToLoad": "Image to load (e.g. kernel)",
     "lang_import": "Import",
     "lang_initRd": "Optional initrd\/initramfs to load",
+    "lang_ipxeSettings": "iPXE-specific settings",
     "lang_ipxeWikiUrl": "at the iPXE wiki",
     "lang_isDefault": "Default",
     "lang_listOfMenus": "Menulist",
