[minilinux] Rewrite for multiple version/sources handling
* You can supply multiple sources for updates (URLs)
* Sources can provide multiple branches
* Each branch can supply multiple versions (eg. updates)

TODO: Set global default version
TODO: Supply hook to serversetup-ipxe to add specific boot entries
TODO: UX polish
TODO: phpdoc/polish

--- a/modules-available/minilinux/lang/de/messages.json
+++ b/modules-available/minilinux/lang/de/messages.json
@@ -1,3 +1,6 @@
 {
-    "please-download-minilinux": "Wichtige Dateien der MiniLinux-Installation fehlen."
+    "delete-error": "Fehler beim L\u00f6schen der Version {{0}}: {{1}}",
+    "no-such-version": "Ung\u00fcltige\/Unbekannte Version: {{0}}",
+    "please-download-minilinux": "Wichtige Dateien der MiniLinux-Installation fehlen",
+    "version-deleted": "Version {{0}} wurde gel\u00f6scht"
 }
