--- a/modules-available/minilinux/lang/de/template-tags.json
+++ b/modules-available/minilinux/lang/de/template-tags.json
@@ -1,15 +1,18 @@
 {
-    "lang_canUpdate1": "Mindestens eine Komponente von",
-    "lang_canUpdate2": "kann aktualisiert werden. F\u00fcr einen reibungslosen Betrieb wird empfohlen, alle Komponenten auf dem aktuellen Stand zu halten.",
-    "lang_configurationPackageNotFound": "Keine Konfigurationspakete gefunden!",
-    "lang_desiredVersion": "Gew\u00fcnschte Version",
-    "lang_errorGetting": "Fehler beim Herunterladen der Liste!",
-    "lang_filesInVersion": "Dateien zu Version",
-    "lang_listObtained": "Liste wird heruntergeladen...",
-    "lang_outdated": "Veraltet",
-    "lang_redownload": "Erneut herunterladen",
-    "lang_systemUpdated": "Das System ist auf dem aktuellen Stand.",
-    "lang_update": "Aktualisieren",
-    "lang_updateAll": "Alle Module aktualisieren",
-    "lang_uptodate": "Aktuell"
+    "lang_confirmDeleteVersion": "Diese Version wirklich l\u00f6schen?",
+    "lang_download": "Herunterladen",
+    "lang_id": "ID",
+    "lang_introText": "Hier gibts MiniLinux.",
+    "lang_key": "GPG-Key",
+    "lang_lastUpdate": "Zuletzt \u00fcberpr\u00fcft",
+    "lang_minilinuxHeading": "Netboot Linux verwalten",
+    "lang_orphanedVersion": "Verwaiste Version",
+    "lang_releaseDate": "Ver\u00f6ffentlichungsdatum",
+    "lang_sources": "Quellen",
+    "lang_title": "Titel",
+    "lang_updateSourcesButton": "Nach neuen Updates suchen",
+    "lang_url": "URL",
+    "lang_verify": "Integrit\u00e4t \u00fcberpr\u00fcfen",
+    "lang_verifyToolTip": "Dateiintegrit\u00e4t anhand von Pr\u00fcfsummen verifizieren",
+    "lang_version": "Version"
 }
