--- a/modules-available/minilinux/lang/de/module.json
+++ b/modules-available/minilinux/lang/de/module.json
@@ -1,8 +1,13 @@
 {
+    "default_boot_entry": "(Globalen Standard verwenden)",
     "file-checksum-bad": "Pr\u00fcfsummenfehler",
     "file-missing": "Datei fehlt",
+    "file-not-readable": "Datei nicht lesbar",
     "file-ok": "OK",
     "file-size-mismatch": "Dateigr\u00f6\u00dfe stimmt nicht",
+    "ipxe-debug": "Debug-Ausgaben statt Bootlogo",
+    "ipxe-kcl-extra": "Modifikation der Kernel-Command-Line",
     "module_name": "bwLehrpool MiniLinux",
+    "not_installed_hint": "(nicht installiert)",
     "page_title": "Linuxvarianten f\u00fcr Netboot verwalten"
 }
