--- a/modules-available/minilinux/lang/de/template-tags.json
+++ b/modules-available/minilinux/lang/de/template-tags.json
@@ -1,14 +1,19 @@
 {
+    "lang_branchesHeading": "Verf\u00fcgbare Varianten und Versionen",
+    "lang_changelog": "Changelog",
     "lang_confirmDeleteVersion": "Diese Version wirklich l\u00f6schen?",
     "lang_download": "Herunterladen",
     "lang_id": "ID",
+    "lang_installed": "Installiert",
     "lang_introText": "Hier gibts MiniLinux.",
     "lang_key": "GPG-Key",
     "lang_lastUpdate": "Zuletzt \u00fcberpr\u00fcft",
     "lang_minilinuxHeading": "Netboot Linux verwalten",
     "lang_orphanedVersion": "Verwaiste Version",
     "lang_releaseDate": "Ver\u00f6ffentlichungsdatum",
+    "lang_selectedDefaultIs": "Gew\u00e4hltes Standardsystem ist",
     "lang_sources": "Quellen",
+    "lang_sourcesIntro": "Liste der Quellen, aus denen Updates bezogen werden k\u00f6nnen.",
     "lang_title": "Titel",
     "lang_updateSourcesButton": "Nach neuen Updates suchen",
     "lang_url": "URL",
