--- a/modules-available/serversetup-bwlp-ipxe/lang/de/template-tags.json
+++ b/modules-available/serversetup-bwlp-ipxe/lang/de/template-tags.json
@@ -11,6 +11,7 @@
     "lang_biosOnly": "Nur BIOS",
     "lang_bootAddress": "Boot-Adresse des Servers",
     "lang_bootEntryData": "Daten des Men\u00fceintrags",
+    "lang_bootEntryDetailsHeading": "Typspezifische Konfiguration",
     "lang_bootentryDeleteConfirm": "Sind Sie sicher, dass Sie diesen Men\u00fceintrag l\u00f6schen wollen?",
     "lang_bootentryHead": "Men\u00fceintr\u00e4ge",
     "lang_bootentryIntro": "Hier k\u00f6nnen Sie Men\u00fceintr\u00e4ge definieren, die sich sp\u00e4ter einem Men\u00fc zuweisen lassen. Ein Men\u00fceintrag besteht entweder aus einem zu ladenden Kernel\/Image plus optional initrd, oder aus einem iPXE-Skript.",
@@ -38,6 +39,7 @@
     "lang_forceRecompile": "Jetzt neu kompilieren",
     "lang_generationFailed": "Erzeugen des Bootmen\u00fcs fehlgeschlagen. Der Netzwerkboot von bwLehrpool wird wahrscheinlich nicht funktionieren. Wenn Sie den Fehler nicht selbst beheben k\u00f6nnen, melden Sie bitte die Logausgabe an das bwLehrpool-Projekt.",
     "lang_hex": "Hex",
+    "lang_hookExtraOptionHeading": "Weitere Angaben",
     "lang_hotkey": "Hotkey",
     "lang_idFormatHint": "(Max. 16 Zeichen, nur a-z 0-9 - _)",
     "lang_imageToLoad": "Zu ladendes Image (z.B. Kernel)",
