[serversetup-bwlp-ipxe/minilinux] Further improvements
* Distinction between BIOS and EFI for ipxe hook in minilinux
* Debug KCL modifier customizable by update meta data
* Bugfixes, minor refactoring...

--- a/modules-available/minilinux/lang/de/module.json
+++ b/modules-available/minilinux/lang/de/module.json
@@ -7,7 +7,7 @@
     "file-size-mismatch": "Dateigr\u00f6\u00dfe stimmt nicht",
     "ipxe-debug": "Debug-Ausgaben statt Bootlogo",
     "ipxe-kcl-extra": "Modifikation der Kernel-Command-Line",
-    "module_name": "bwLehrpool MiniLinux",
+    "module_name": "Netboot Grundsystem",
     "not_installed_hint": "(nicht installiert)",
     "page_title": "Linuxvarianten f\u00fcr Netboot verwalten"
 }
