--- a/modules-available/serversetup-bwlp-ipxe/lang/de/template-tags.json
+++ b/modules-available/serversetup-bwlp-ipxe/lang/de/template-tags.json
@@ -40,6 +40,7 @@
     "lang_generationFailed": "Erzeugen des Bootmen\u00fcs fehlgeschlagen. Der Netzwerkboot von bwLehrpool wird wahrscheinlich nicht funktionieren. Wenn Sie den Fehler nicht selbst beheben k\u00f6nnen, melden Sie bitte die Logausgabe an das bwLehrpool-Projekt.",
     "lang_hex": "Hex",
     "lang_hookExtraOptionHeading": "Weitere Angaben",
+    "lang_hookOfModule": "Eintrag von",
     "lang_hotkey": "Hotkey",
     "lang_idFormatHint": "(Max. 16 Zeichen, nur a-z 0-9 - _)",
     "lang_imageToLoad": "Zu ladendes Image (z.B. Kernel)",
@@ -61,6 +62,7 @@
     "lang_menuTimeout": "Timeout",
     "lang_menuTitle": "Men\u00fc",
     "lang_moduleHeading": "iPXE \/ Boot Menu",
+    "lang_moduleSpecificId": "Modulspezifische ID",
     "lang_newBootEntryHead": "Neuer Men\u00fceintrag",
     "lang_newMenu": "Neues Men\u00fc",
     "lang_none": "(keine)",
@@ -72,6 +74,7 @@
     "lang_recompileHint": "iPXE-Binaries jetzt neu kompilieren. Normalerweise wird dieser Vorgang bei \u00c4nderungen automatisch ausgef\u00fchrt. Sollten Bootprobleme auftreten, k\u00f6nnen Sie hier den Vorgang manuell ansto\u00dfen.",
     "lang_refCount": "Referenzen",
     "lang_referencingMenus": "Verkn\u00fcpfte Men\u00fcs",
+    "lang_saveAndReload": "Speichern und neu laden",
     "lang_scriptContent": "Skript",
     "lang_seconds": "Sekunden",
     "lang_set": "Setzen",
