[minilinux] Add some tool-tips

--- a/modules-available/minilinux/lang/de/template-tags.json
+++ b/modules-available/minilinux/lang/de/template-tags.json
@@ -6,12 +6,15 @@
     "lang_id": "ID",
     "lang_installed": "Installiert",
     "lang_introText": "Hier gibts MiniLinux.",
+    "lang_isGlobalDefault": "Ist globaler Standard",
     "lang_key": "GPG-Key",
     "lang_lastUpdate": "Zuletzt \u00fcberpr\u00fcft",
     "lang_minilinuxHeading": "Netboot Linux verwalten",
-    "lang_orphanedVersion": "Verwaiste Version",
+    "lang_orphanedVersion": "Verwaist",
+    "lang_orphanedVersionToolTip": "Diese Version wird vom Update-Server nicht mehr angeboten",
     "lang_releaseDate": "Ver\u00f6ffentlichungsdatum",
     "lang_selectedDefaultIs": "Gew\u00e4hltes Standardsystem ist",
+    "lang_setGlobalDefault": "Als globalen Standard festlegen",
     "lang_sources": "Quellen",
     "lang_sourcesIntro": "Liste der Quellen, aus denen Updates bezogen werden k\u00f6nnen.",
     "lang_title": "Titel",
