[statistics/baseconfig] Allow per-machine configvar overrides

--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -9,6 +9,7 @@
     "lang_biosUpdateLink": "Zur Herstellerseite",
     "lang_biosVersion": "BIOS-Version",
     "lang_clientList": "Liste ausgew\u00e4hlter Rechner",
+    "lang_configVars": "Konfigurationsvariablen",
     "lang_cores": "Kerne",
     "lang_cpuCores": "CPU-Kerne",
     "lang_cpuModel": "CPU",
