--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -9,6 +9,7 @@
     "lang_biosUpdateLink": "Go to vendor's site",
     "lang_biosVersion": "BIOS version",
     "lang_clientList": "List of selected machines",
+    "lang_configVars": "Config Variables",
     "lang_cores": "Cores",
     "lang_cpuCores": "CPU cores",
     "lang_cpuModel": "CPU",
