[baseconfig] Overhaul hook system
This enables us to finally properly show the inheritance flow
of all the config variables when editing the baseconfig for
a certain location or machine.

--- a/modules-available/baseconfig/lang/de/module.json
+++ b/modules-available/baseconfig/lang/de/module.json
@@ -1,3 +1,5 @@
 {
-    "module_name": "Konfigurationsvariablen"
+    "module_name": "Konfigurationsvariablen",
+    "source-default": "Auslieferungszustand",
+    "source-global": "Global"
 }
