--- a/modules-available/baseconfig/lang/en/template-tags.json
+++ b/modules-available/baseconfig/lang/en/template-tags.json
@@ -1,8 +1,7 @@
 {
     "lang_basicConfiguration": "Basic Configuration",
     "lang_clientRelatedConfig": "The options on this page are related to the bwLehrpool client machines.",
-    "lang_defaultValue": "Default",
     "lang_editOverrideNotice": "You're editing the settings of a sub-section",
     "lang_enableOverride": "Override",
-    "lang_inheritSource": "Inherited from"
+    "lang_showParents": "Inherited values"
 }
