[locations] Show number of machines with configvar overrides

--- a/modules-available/locations/lang/de/template-tags.json
+++ b/modules-available/locations/lang/de/template-tags.json
@@ -32,7 +32,8 @@
     "lang_moveMachines": "In durch Subnet zugeordneten Raum verschieben",
     "lang_moveable": "Verschiebbar",
     "lang_name": "Name",
-    "lang_overrideCount": "Angepasst",
+    "lang_numMachinesWithOverrides": "Anzahl Rechner, bei denen mindestens eine Konfigurationsvariable \u00fcberschrieben wird",
+    "lang_overridenVarsForLocation": "Anzahl Variablen, die an diesem Ort \u00fcberschrieben werden",
     "lang_parentLocation": "\u00dcbergeordneter Ort",
     "lang_referencingLectures": "Veranstaltungen",
     "lang_resetMachines": "Raumzuweisung zur\u00fccksetzen",
