--- a/modules-available/locations/lang/en/template-tags.json
+++ b/modules-available/locations/lang/en/template-tags.json
@@ -32,7 +32,9 @@
     "lang_moveMachines": "Move to room designated by IP address",
     "lang_moveable": "Moveable",
     "lang_name": "Name",
+    "lang_numMachinesWithOverrides": "Number of clients where at least one variable is overridden",
     "lang_overrideCount": "Overridden",
+    "lang_overridenVarsForLocation": "Number of variables that get overridden for this location",
     "lang_parentLocation": "Parent location",
     "lang_referencingLectures": "Assigned Lectures",
     "lang_resetMachines": "Reset room assignment",
