[statistics] Tag clients with overridden config.vars in list view

--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -23,6 +23,7 @@
     "lang_free": "frei",
     "lang_gbRam": "RAM",
     "lang_hardwareSummary": "Hardware",
+    "lang_hasNotes": "Zu diesem Rechner wurden Notizen hinterlegt",
     "lang_hdds": "Festplatten",
     "lang_hostname": "Hostname",
     "lang_inUseMachines": "In Verwendung",
@@ -62,6 +63,7 @@
     "lang_noEdid": "Kein EDID",
     "lang_noProjectorsDefined": "Keine Beamer-Overrides definiert",
     "lang_notes": "Anmerkungen",
+    "lang_numConfigVars": "Anzahl \u00fcberschriebener Konfigurationsvariablen",
     "lang_onlineMachines": "Gestartete Clients",
     "lang_partName": "Name",
     "lang_partSize": "Gr\u00f6\u00dfe",
