--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -23,6 +23,7 @@
     "lang_free": "free",
     "lang_gbRam": "RAM",
     "lang_hardwareSummary": "Hardware",
+    "lang_hasNotes": "Notes have been added to this client",
     "lang_hdds": "Hard disk drives",
     "lang_hostname": "Hostname",
     "lang_inUseMachines": "In use",
@@ -62,6 +63,7 @@
     "lang_noEdid": "No EDID",
     "lang_noProjectorsDefined": "No projector overrides defined",
     "lang_notes": "Notes",
+    "lang_numConfigVars": "Number of configuration variables overridden for this client",
     "lang_onlineMachines": "Online clients",
     "lang_partName": "Name",
     "lang_partSize": "Size",
