[sysconfig] Allow deleting modules that are still used by a config
Closes #3075

--- a/modules-available/sysconfig/lang/de/template-tags.json
+++ b/modules-available/sysconfig/lang/de/template-tags.json
@@ -74,6 +74,7 @@
     "lang_mapModeNativeFallback": "Nativ in der VM einbinden; Fallback auf VMware Shared Folders",
     "lang_mapModeNone": "Verzeichnisse nicht durchreichen",
     "lang_mapModeVmware": "VMware Shared Folders [VMwareTools]",
+    "lang_modStillUsedBy": "Modul noch in Verwendung durch:",
     "lang_moduleChoose": "Bitte w\u00e4hlen Sie aus, welche Art Konfigurationsmodul Sie erstellen m\u00f6chten.",
     "lang_moduleConfiguration": "Konfigurationsmodule",
     "lang_moduleName": "Modulname",
