[rebootcontrol] Start adding WOL functionality

--- a/modules-available/rebootcontrol/lang/de/module.json
+++ b/modules-available/rebootcontrol/lang/de/module.json
@@ -1,4 +1,4 @@
 {
-    "module_name": "Reboot Control",
-    "page_title": "Reboot Control"
+    "module_name": "WakeOnLAN",
+    "page_title": "WakeOnLAN"
 }
