--- a/modules-available/rebootcontrol/lang/de/template-tags.json
+++ b/modules-available/rebootcontrol/lang/de/template-tags.json
@@ -1,39 +1,42 @@
 {
     "lang_activeTasks": "Laufende Jobs",
+    "lang_assignedSubnets": "Subnets",
     "lang_authFail": "Authentifizierung fehlgeschlagen",
+    "lang_check": "Testen",
+    "lang_checkOutputLabel": "Ausgabe",
+    "lang_checkingJumpHost": "Teste Sprung-Host",
     "lang_client": "Client",
     "lang_clientCount": "# Clients",
-    "lang_confirmNewKeypair": "Wirklich neues Schl\u00fcsselpaar erzeugen?",
     "lang_connecting": "Verbinde...",
+    "lang_editJumpHost": "Sprung-Host bearbeiten",
     "lang_error": "Nicht erreichbar",
     "lang_genNew": "Neues Schl\u00fcsselpaar generieren",
+    "lang_host": "Horst",
+    "lang_hostDeleteConfirm": "Diesen Sprung-Host l\u00f6schen?",
+    "lang_hostNonZeroExit": "Das hinterlegte Script hat einen Exit-Code ungleich 0 zur\u00fcckgeliefert",
+    "lang_hostNotReachable": "Host nicht erreichbar",
+    "lang_hostReachable": "Host erreichbar",
     "lang_ip": "IP",
-    "lang_kexecRebootCheck": "Schneller Reboot direkt in bwLehrpool",
+    "lang_jumpHosts": "Spring-Hosts",
+    "lang_keypairConfirmCheck": "Ich bin sicher",
     "lang_location": "Standort",
-    "lang_minutes": " Minuten",
     "lang_mode": "Modus",
+    "lang_moduleHeading": "WakeOnLAN",
+    "lang_new": "Neu",
     "lang_newKeypairExplanation": "Sie k\u00f6nnen ein neues Schl\u00fcsselpaar erzeugen lassen. In diesem Fall wird das alte Schl\u00fcsselpaar verworfen, sodass alle zum jetzigen Zeitpunkt bereits gestarteten Rechner nicht mehr aus der Ferne bedient werden k\u00f6nnen, bis diese manuell neugestartet wurden.",
-    "lang_off": "Aus",
-    "lang_on": "An",
     "lang_online": "Online",
+    "lang_port": "Port",
+    "lang_privkey": "Geheimer Schl\u00fcssel",
     "lang_pubKey": "SSH Public Key:",
-    "lang_reboot": "Neustarten",
+    "lang_reachable": "Erreichbar",
     "lang_rebootAt": "Neustart um:",
-    "lang_rebootButton": "Neustarten",
-    "lang_rebootCheck": "Wollen Sie die ausgew\u00e4hlten Rechner wirklich neustarten?",
-    "lang_rebootControl": "Reboot Control",
-    "lang_rebootIn": "Neustart in:",
     "lang_rebooting": "Neustart...",
-    "lang_selectall": "Alle ausw\u00e4hlen",
-    "lang_selected": "Ausgew\u00e4hlt",
-    "lang_session": "Sitzung",
     "lang_settings": "Einstellungen",
     "lang_shutdown": "Herunterfahren",
     "lang_shutdownAt": "Herunterfahren um: ",
-    "lang_shutdownButton": "Herunterfahren",
-    "lang_shutdownCheck": "Wollen Sie die ausgew\u00e4hlten Rechner wirklich herunterfahren?",
-    "lang_shutdownIn": "Herunterfahren in: ",
     "lang_status": "Status",
     "lang_time": "Zeit",
-    "lang_unselectall": "Alle abw\u00e4hlen"
+    "lang_wakeScriptHelp": "Dieses Script wird auf dem Sprung-Host ausgef\u00fchrt, um den\/die gew\u00fcnschten Maschinen aufzuwecken. Es wird unter der Standard-Shell des oben angegebenen Benutzers ausgef\u00fchrt. Das Script kann zwei spezielle Platzhalter enthalten, die vor dem Ausf\u00fchren des Scripts vom Satellitenserver ersetzt werden: %MACS% ist eine durch Leerzeichen getrennte Liste von MAC-Adressen, die aufzuwecken sind. Das Tool \"wakeonlan\" unterst\u00fctzt direkt mehrere MAC-Adressen, sodass der Platzhalter %MACS% direkt als Kommandozeilenargument verwendet werden kann. Das Tool \"etherwake\" hingegen kann pro Aufruf immer nur einen Host aufwecken, weshalb eine for-Schleife notwendig ist. Au\u00dferdem wird der Platzhalter %IP% ersetzt, welcher je nach Ziel entweder \"255.255.255.255\" ist, oder bei einem netz\u00fcbergreifenden WOL-Paket die \"directed broadcast address\" des Zielnetzes. Netz\u00fcbergreifende WOL-Pakete werden vom \"etherwake\" nicht unterst\u00fctzt.",
+    "lang_wakeupScript": "Aufweck-Script",
+    "lang_wolReachability": "WOL-Erreichbarkeit"
 }
