--- a/modules-available/rebootcontrol/lang/en/template-tags.json
+++ b/modules-available/rebootcontrol/lang/en/template-tags.json
@@ -9,9 +9,11 @@
     "lang_genNew": "Generate new keypair",
     "lang_ip": "IP",
     "lang_kexecRebootCheck": "Quick reboot straight to bwLehrpool (kexec)",
+    "lang_keypairConfirmCheck": "I'm sure",
     "lang_location": "Location",
     "lang_minutes": " Minutes",
     "lang_mode": "Mode",
+    "lang_moduleHeading": "WakeOnLAN",
     "lang_newKeypairExplanation": "You can create a new keypair, which will replace the old one. Please note that after doing so, you cannot poweroff or reboot clients that are already running, since they still use the old key. They have to be rebooted manually first.",
     "lang_off": "Off",
     "lang_on": "On",
