[locationinfo] add new kiosk-mode options to url-panels - guest / guest+user login - browser selection - interactive mode - bookmarks

--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -4,10 +4,15 @@
     "lang_autoscaleTooltip": "Berechnet anhand der Bildschirmbreite die optimale Anzahl an Tagen, die der Kalender anzeigt",
     "lang_backend": "Backend",
     "lang_backends": "Backends",
+    "lang_bookmarks": "Lesezeichen",
+    "lang_bookmarksTooltip": "Füge Lesezeichen hinzu, die der Browser erhalten soll",
+    "lang_browser": "Browser",
+    "lang_browserTooltip": "Welcher Browser soll genutzt werden",
     "lang_calendar": "Kalender",
     "lang_calendarUpdate": "Kalender Update",
     "lang_calupdateTooltip": "Zeit nachdem der Kalender aktualisiert wird (in Minuten)",
     "lang_checkConnection": "Verbindung pr\u00fcfen",
+    "lang_chromium": "Chromium",
     "lang_closed": "Geschlossen",
     "lang_closingTime": "Schlie\u00dfungszeit",
     "lang_configOverride": "Konfiguration überschreiben",
@@ -41,6 +46,8 @@
     "lang_generalSettings": "Allgemeine Einstellungen",
     "lang_ignoreSslTooltip": "Akzeptiere ung\u00fcltige, abgelaufene oder selbstsignierte SSL-Zertifikate",
     "lang_insecureSsl": "Unsicheres SSL",
+    "lang_interactive": "Interaktiver Browser",
+    "lang_interactiveTooltip": "Aktivieren, um reguläres Surfen zuzulassen",
     "lang_language": "Sprache",
     "lang_languageTooltip": "Legt die Sprache der angezeigten Oberfl\u00e4che fest",
     "lang_lastCalendarUpdate": "Kalender Update",
@@ -121,6 +128,9 @@
     "lang_shortWed": "Mi",
     "lang_shortWednesday": "Mi",
     "lang_showLog": "Log",
+    "lang_slxbrowser": "SLX Browser",
+    "lang_splitlogin": "Geteiltes Login",
+    "lang_splitloginTooltip": "Erlaube nur Gast-Login oder Gast+Nutzer-Login wenn aktiviert",
     "lang_startDay": "Start Tag",
     "lang_startDayTooltip": "Der Wochentag an dem der Kalender anfängt",
     "lang_summaryPanel": "\u00dcbersichts-Panel",
