--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -4,10 +4,15 @@
     "lang_autoscaleTooltip": "Calculates the optimum amount of days to show from the display width",
     "lang_backend": "Backend",
     "lang_backends": "Backends",
+    "lang_bookmarks": "Bookmarks",
+    "lang_bookmarksTooltip": "Add bookmarks to the browser",
+    "lang_browser": "Browser",
+    "lang_browserTooltip": "Which browser shall be used",
     "lang_calendar": "Calendar",
     "lang_calendarUpdate": "Calendar Update",
     "lang_calupdateTooltip": "Time the calender querys for updates (in minutes)",
     "lang_checkConnection": "Check connection",
+    "lang_chromium": "Chromium",
     "lang_closed": "Closed",
     "lang_closingTime": "Closing time",
     "lang_configOverride": "Configuration override",
@@ -41,6 +46,8 @@
     "lang_generalSettings": "General Settings",
     "lang_ignoreSslTooltip": "Accept invalid, expired or self-signed ssl certificates",
     "lang_insecureSsl": "Insecure SSL",
+    "lang_interactive": "Interactive Browser",
+    "lang_interactiveTooltip": "Activate to allow regular websurfing",
     "lang_language": "Language",
     "lang_languageTooltip": "The language the frontend uses",
     "lang_lastCalendarUpdate": "Calendar update",
@@ -121,6 +128,9 @@
     "lang_shortWed": "Wed",
     "lang_shortWednesday": "Wed",
     "lang_showLog": "Log",
+    "lang_slxbrowser": "SLX Browser",
+    "lang_splitlogin": "Split Login",
+    "lang_splitloginTooltip": "Allow only guest-login or guest+user-login if activated",
     "lang_startDay": "Start Day",
     "lang_startDayTooltip": "The day of the week at which the calendar starts",
     "lang_summaryPanel": "Summary panel",
