--- a/modules-available/rebootcontrol/lang/de/template-tags.json
+++ b/modules-available/rebootcontrol/lang/de/template-tags.json
@@ -11,13 +11,13 @@
     "lang_editJumpHost": "Sprung-Host bearbeiten",
     "lang_error": "Nicht erreichbar",
     "lang_genNew": "Neues Schl\u00fcsselpaar generieren",
-    "lang_host": "Horst",
+    "lang_host": "Host",
     "lang_hostDeleteConfirm": "Diesen Sprung-Host l\u00f6schen?",
     "lang_hostNonZeroExit": "Das hinterlegte Script hat einen Exit-Code ungleich 0 zur\u00fcckgeliefert",
     "lang_hostNotReachable": "Host nicht erreichbar",
     "lang_hostReachable": "Host erreichbar",
     "lang_ip": "IP",
-    "lang_jumpHosts": "Spring-Hosts",
+    "lang_jumpHosts": "Sprung-Hosts",
     "lang_keypairConfirmCheck": "Ich bin sicher",
     "lang_location": "Standort",
     "lang_mode": "Modus",
