--- a/modules-available/rebootcontrol/lang/de/permissions.json
+++ b/modules-available/rebootcontrol/lang/de/permissions.json
@@ -1,5 +1,12 @@
 {
-	"action.shutdown": "Client herunterfahren.",
-	"action.reboot": "Client neustarten.",
-	"newkeypair": "Neues Schlüsselpaar generieren."
+    "action.reboot": "Client neustarten.",
+    "action.shutdown": "Client herunterfahren.",
+    "action.wol": "Client per WOL starten.",
+    "jumphost.assign-subnet": "Einem Sprung-Host ein Subnet zuweisen.",
+    "jumphost.edit": "Einen Sprung-Host bearbeiten.",
+    "jumphost.view": "Liste der Sprung-Hosts sehen.",
+    "newkeypair": "Neues Schl\u00fcsselpaar generieren.",
+    "subnet.edit": "Subnets hinzuf\u00fcgen\/entfernen.",
+    "subnet.flag": "Eigenschaften eines Subnets bearbeiten.",
+    "subnet.view": "Liste der Subnets sehen."
 }
